--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import-normalize; /* bring in normalize.css styles */
+@import url('react-toastify/dist/ReactToastify.css');
 
 body {
   margin: 0;
@@ -42,16 +43,6 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
-}
-
-/*
- * Стили компонента App
- */
-.App {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 16px;
-  padding-bottom: 24px;
 }
 
 /*
